Add Conditioanl template

--- a/samples/index.html
+++ b/samples/index.html
@@ -112,7 +112,7 @@
   <ul>
     <li><a href="./template-repeater.html">Template repeater</a></li>
     <li><a href="./array-selector.html">Array selector</a></li>
-    <li><a href="./conditional-template.html">conditional template</a></li>
+    <li><a href="./conditional-template.html">Conditional template</a></li>
     <li><a href="./self-binding-template.html">Self-binding template</a></li>
     <li><a href="./custom-element-for-document-styling-x-style.html">Custom element for document styling - x-style</a></li>
   </ul>
