--- a/samples/conditional-template.html
+++ b/samples/conditional-template.html
@@ -3,41 +3,34 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
-  <title>Polymer Samples - Computed properties</title>
+  <title>Polymer Samples - Conditional template</title>
   <script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
   <script src="debug.js"></script>
   <link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
-<dom-module id="x-custom">
+<dom-module id="user-page">
   <template>
-    My name is <span>{{fullName}}</span>
+    All users will see this:
+    <div>{{user.name}}</div>
+    <template is="dom-if" if="{{user.isAdmin}}">
+      Only admins will see this.
+      <div>{{user.secretAdminStuff}}</div>
+    </template>
   </template>
+
+  <script>
+    document.addEventListener('WebComponentsReady', function() {
+      Polymer({
+        is: 'user-page',
+        properties: {
+          user: Object
+        }
+      });
+    });
+  </script>
 </dom-module>
 
-<script>
-  document.addEventListener('WebComponentsReady', function() {
-    Polymer({
-      is: 'x-custom',
-
-      properties: {
-        first: String,
-        last: String,
-        fullName: {
-          type: String,
-          // when `first` or `last` changes `computeFullName` is called once
-          // (asynchronously) and the value it returns is stored as `fullName`
-          computed: 'computeFullName(first, last)'
-        }
-      },
-
-      computeFullName: function(first, last) {
-        return first + ' ' + last;
-      }
-    });
-  });
-</script>
-
-<x-custom first="John" last="Doe"></x-custom>
+<user-page user='{"name": "John", "isAdmin": "true"}'></user-page>
 </body>
 </html>
