--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <h2>Polymer Working Samples for 1.0</h2>
-  <p>The sample shows how to works Polymer 1.0. Many samples output their log to console. So console window of the browser should be opened to watch the logs. Currently Polymer 1.0 has been changing everyday, thus It can be possible that a few of samples could not works properly by version changing. We will keep tracking their changes. The sample list according to <a href="https://github.com/Polymer/polymer/blob/master/PRIMER.md">Polymer 1.0 Primer content</a></p>
+  <p>The sample shows how to works Polymer 1.0. Many samples output their log to console. the console should be opened to watch the logs. The sample list according to <a href="https://github.com/Polymer/polymer/blob/master/PRIMER.md">Polymer 1.0 Primer content</a></p>
 
   <h3>Basic Custom Element sugaring</h3>
   <ul>
