Embedded script block to dom-module

--- a/demo/attribute-deserialization.html
+++ b/demo/attribute-deserialization.html
@@ -9,13 +9,11 @@
 	<link rel="import" href="./bower_components/polymer/polymer.html">
 </head>
 <body>
-<x-custom user="Scott" manager></x-custom>
-<br/>
-<x-custom manager></x-custom>
-<br/>
-<x-custom></x-custom>
-<br/>
+<x-custom user="Scott" manager></x-custom><br/>
+<x-custom manager></x-custom><br/>
+<x-custom></x-custom><br/>
 <x-custom-camel-case-property user-name="Scott"></x-custom-camel-case-property>
+
 <script>
   document.addEventListener('WebComponentsReady', function() {
     Polymer({
