--- a/demo/static-attributes-on-host.html
+++ b/demo/static-attributes-on-host.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <!-- result in: <x-custom role="button" aria-disabled tabindex="0"></x-custom> -->
-<x-custom></x-custom>
-<br/>
+<x-custom></x-custom><br/>
+
 <!-- attribute value will be changed in creation time></x-custom> -->
 <x-custom role="tab" tabindex="1"></x-custom>
 <script>
